Fixing spacing

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -35,6 +35,7 @@ nav ul li {
 
 .img {
     float: left;
+    margin: auto;
 }
 
 .text {
@@ -58,9 +59,9 @@ footer {
 }
 
 h2 {
-    font-size: 45px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 1rem;
+    font-size: 35px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 5px;
 }
 
 .sendbutton {
